--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <p>Cooming Soon</p><br>
                     <div class="button-1">
                         <button type="button" value="details" id="det">More details</Details></button>&nbsp;&nbsp;
-                        <button type="menu" value="booking" id="book">Pre Book Now</button>
+                        <button type="menu" value="booking" id="book">Book Now</button>
                     </div>
                 </div>
                 <div class="col-5">
@@ -161,7 +161,7 @@
                     <p>Cooming Soon</p><br>
                     <div class="button-1">
                         <button type="button" value="details" id="det">More details</Details></button>&nbsp;&nbsp;
-                        <button type="menu" value="booking" id="book">Pre Book Now</button>
+                        <button type="menu" value="booking" id="book">Book Now</button>
                     </div>
                 </div>
             </div>
