--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="#" class="btn">Explore Now &#8594; </a>
                     </div>
                     <div class="col-2">
-                        <img src="./static/tag_line_right.jpg" >
+                        <img src="./Static/tag_line_right.jpg" >
                     </div>
                 </div>
             </div>
