--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Project</title>
+<script>
+    var MenuItems = document.getElementById("MenuItems");
 
+    MenuItems.style.maxHeight = "0px";
+
+    function menutoggle() {
+        if (MenuItems.style.maxHeight == "0px") {
+            MenuItems.style.maxHeight == "200px";
+        }
+        else {
+            MenuItems.style.maxHeight == "0px"
+        }
+
+    }
+</script>
 </head>
 <!--------- civil engg related page ---------->
 
@@ -273,22 +287,7 @@
   
       <!-- ------- js for toggle menu ------- -->
       
-      <script>
-        var MenuItems = document.getElementById("MenuItems");
-
-        MenuItems.style.maxHeight = "0px" ;
-
-        function menutoggle() {
-            if(MenuItems.style.maxHeight == "0px")
-            {
-               MenuItems.style.maxHeight == "200px"  ;
-            }
-            else{
-                MenuItems.style.maxHeight == "0px"
-            }
- 
-        }
-      </script>
+     
 
 </body>
 
